feat: user's products query api
